# sqp

./: README.md  main.py  pyproject.toml  setup.py
sqp/: auth.py  db.py  objects.py  query.py
sqp/dialects/: sql.py  sqlite.py
sqp/drivers/: sqlite.py
